fix: try to fix .env variables issue

--- a/Backend/.env.example
+++ b/Backend/.env.example
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.iqs1ggl.mongodb.net/?appName=Cluster0
+DB_URL=postgresql://user:password@host:port/dbname
 PORT=5000
