--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,8 +16,11 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "express-validator": "^7.3.1",
+    "joi": "^18.0.2",
     "jsonwebtoken": "^9.0.3",
-    "mongoose": "^9.0.2"
+    "mongoose": "^9.0.2",
+    "validator": "^13.15.26"
   },
   "devDependencies": {
     "eslint": "^9.39.2",
